--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Terracotta Warrior</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-    </body>
-    <footer>
-        <script src="bower_components/seedrandom/seedrandom.min.js"></script>
-        <script src="js/utils.js"></script>
-        <script src="js/type.js"></script>
-        <script src="js/user.js"></script>
-        <script src="js/equation.js"></script>
-        <script src="js/markdown.js"></script>
-        <script src="js/user.js"></script>
-        <script src="js/question.js"></script>
-        <script src="js/answer.js"></script>
-    </footer>
-</html>
+<script src="dist/tw.js"></script>
